<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dimichspb.cypruscarrentals.ContactUsActivity"
    tools:showIn="@layout/activity_contact_us">

    <LinearLayout
        android:id="@+id/contact_us_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:hint="@string/prompt_contact_us_message"
                android:imeActionId="@+id/contact_us"
                android:imeActionLabel="@string/action_contact_us_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:singleLine="false" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_contact_us_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_contact_us"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
